Chrome OS: revert the device wallpaper change within a user session.

The device policy should never leak to a user's session. In the old CL
https://codereview.chromium.org/2572793003 we use the device policy
controlled wallpaper as the user wallpaper within a user's session if
there is no user wallpaper policy controlled wallpaper and no user-
defined wallpaper. This CL reverted this logic.

Note this CL is not a clean fix since I want to keep it simple to merge
back to M58. I'll do a cleaner fix after it's been merged.

BUG=705028

Review-Url: https://codereview.chromium.org/2772973003
Cr-Commit-Position: refs/heads/master@{#460281}

Former-commit-id: 8c8e69e14bebb66cba7f31887865d76b24817080