components/wallpaper/wallpaper_manager_base.h
@@ -359,12 +359,8 @@ class WALLPAPER_EXPORT WallpaperManagerBase {
   // Ruturns files identifier for the |account_id|.
   virtual WallpaperFilesId GetFilesId(const AccountId& account_id) const = 0;
 
-  // If the device is enterprise managed and we're at the login screen, set the
-  // device wallpaper as the login screen wallpaper. If the device is enterprise
-  // managed and we're in a user session, only set the device wallpaper if there
-  // is no user policy wallpaper and the user hasn't changed the default or the
-  // device wallpaper. Returns true if the device wallpaper should be set as the
-  // wallpaper, otherwise returns false.
+  // If the device is enterprise managed and the device wallpaper policy exists,
+  // set the device wallpaper as the login screen wallpaper.
   virtual bool SetDeviceWallpaperIfApplicable(const AccountId& account_id) = 0;
 
  protected:
